--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.2.2",
     "express": "^4.15.2",
     "history": "^5.0.0",
+    "material-ui-color": "^0.4.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
