--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.15.2",
     "history": "^5.0.0",
     "material-ui-color": "^0.4.6",
+    "material-ui-search-bar": "^1.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
