--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "material-ui-search-bar": "^1.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-pdf": "^5.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-to-pdf": "0.0.13",
     "recharts": "^1.8.5",
     "web-vitals": "^0.2.4"
   },
