--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "history": "^5.0.0",
     "material-ui-color": "^0.4.6",
     "material-ui-search-bar": "^1.0.0",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-moment": "^1.0.0",
     "react-pdf": "^5.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
